...
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="405dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="199dp"
        android:layout_height="61dp"
        android:background="@drawable/savebtn"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="488dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:background="@drawable/Groupdeletebut"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="488dp" />

...
