...
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="514dp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="181dp"
        android:layout_height="29dp"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteX="214dp"
...
