<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/background">    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="134dp"
        android:layout_height="99dp"
        app:srcCompat="@drawable/Logo"
        tools:layout_editor_absoluteX="-4dp"
        tools:layout_editor_absoluteY="-5dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="329dp"
        android:layout_height="670dp"
        app:srcCompat="@drawable/loginbox"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="First Name"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="189dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="334dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Password"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="408dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E=-mail"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="265dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last Name"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="133dp"
        android:layout_height="36dp"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="208dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="133dp"
        android:layout_height="36dp"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="208dp"
        tools:layout_editor_absoluteY="208dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="284dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="361dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="427dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regbtn"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="487dp" />
</androidx.constraintlayout.widget.ConstraintLayout>