<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="688dp"
        app:srcCompat="@drawable/loginbox"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="21dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/Logo"
        tools:layout_editor_absoluteX="-40dp"
        tools:layout_editor_absoluteY="-10dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <Button
        android:id="@+id/button"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:background="@drawable/loginbut"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="449dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="290dp"
        android:layout_height="106dp"
        app:srcCompat="@drawable/welcome"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="152dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/Textb"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="397dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="103dp"
        android:layout_height="39dp"
        android:text="Username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="286dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="373dp" />
</androidx.constraintlayout.widget.ConstraintLayout>